--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Redirecting...</title>
 </head>
 <body>
-  <p>페이지를 불러오는 중입니다. 자동으로 이동하지 않으면 <a href="main.html">여기</a>를 클릭하세요.</p>
+  <p>페이지를 불러오는 중입니다. 자동으로 이동하지 않으면 <a href="html/main.html">여기</a>를 클릭하세요.</p>
 </body>
 </html>
