--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=main.html">
+  <meta http-equiv="refresh" content="0; url=../html/main.html">
   <title>Redirecting...</title>
 </head>
 <body>
